Added stocks image in index page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,8 @@
+.stocks-image{
+    background-image: asset-url('stocks.png');
+    background-size: cover;
+    height: 550px;
+}
 .results-block{
     display: inline-block;
 }
