--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,6 @@
- <h1>Welcome to the finance tracker app</h1>
+<div class="container">
+    <h1 align="center">Welcome to the Finance Tracker app</h1>
+    <div class="stocks-image"></div>
+</div>
+
  
